--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
-import '../styles/global.css';
-import Layout from '../layouts/Layout.astro';
+import Layout from '@/layouts/Layout.astro';
+import bg from '@/assets/bg_home.jpg';
 ---
 
-<Layout>
+<Layout
+title='Home' description='Welcome to the home page' bgImage={bg.src} subtitle='Disfruta una deliciosa taza de café'
+>
     <h1 class="text-3xl font-bold">Welcome to Astro</h1>
 </Layout>
